finished up and also changed main.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
 </head>
 <body>
 	<div class = "main">
+
 		<div class = "ryu">
 			<div class="ryu-still"></div>
 		  <div class="ryu-ready"></div>
 		  <div class="ryu-throwing"></div>
+		  <div class = "ryu-cool"></div>
+
 		</div>
 		<div class = "hadouken"></div>
-	</div>
+		<div class = "intro">
+			<h1>Ryu on Street Fight Check it out</h1>
+			<p>Ready for Ryu? Lets get started...</p>
+			<ul>
+				<li>Mouse over Ryu to get him warm up. </li>
+				<li>Click on him to release one of his strongest weapon.</li>
+				<li>Press X on your keyboard to calm him down. On a good day, Ryu is a kool guy!</li>
+			</ul>
+		</div>
+</div>
+
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
 </html>
